# Everything-the-Light-Touches

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  main.cpp  renderedImage.ppm
include/: Camera.h  MaterialProperties.h  Ray.h  RenderSettings.h  Scene.h  SceneObject.h
src/: Camera.cpp  MaterialProperties.cpp  Ray.cpp  Scene.cpp  SceneObject.cpp
